# ChangeLog for media-plugins/flexplaylist
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/flexplaylist/Attic/ChangeLog,v 1.4 2004/06/24 23:28:15 agriffis Exp $

  23 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  flexplaylist-0.4.8.ebuild:
  Stable x86.  Added ~amd64.

  13 May 2004; David Holm <dholm@gentoo.org> flexplaylist-0.4.8.ebuild:
  Added to ~ppc.

*flexplaylist-0.4.8 (12 May 2004)

  12 May 2004; Jon Hood <squinky86@gentoo.org> +flexplaylist-0.4.8.ebuild:
  Initial commit. Closes #37644. Thanks to Lucas Roxo Mundim
  <el_mariel@uol.com.br> for this ebuild.
