@@ -1,17 +1,17 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/flexplaylist/Attic/flexplaylist-0.4.8.ebuild,v 1.4 2004/06/24 23:28:16 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/flexplaylist/Attic/flexplaylist-0.4.8.ebuild,v 1.5 2004/06/29 00:33:10 carlo Exp $
 
-inherit kde-base
+inherit kde
 
 DESCRIPTION="Winamp/XMMS like Playlist for Noatun 2"
-SRC_URI="http://metz.gehn.net/files/CurrentSources/${P}.tar.bz2"
 HOMEPAGE="http://metz.gehn.net/"
-IUSE=""
+SRC_URI="http://metz.gehn.net/files/CurrentSources/${P}.tar.bz2"
 
+SLOT="0"
 LICENSE="Artistic-2"
 KEYWORDS="x86 ~ppc ~amd64"
+IUSE=""
 
+DEPEND=">=kde-base/kdemultimedia-3.0"
 need-kde 3
-
-newdepend ">=kde-base/kdemultimedia-3.0"
